--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hh-toolkit-utils",
-  "version": "1.0.5",
+  "name": "everyday-helper",
+  "version": "1.0.1",
   "description": "A comprehensive collection of React hooks, utility functions, and helpers for modern React development",
   "license": "MIT",
   "type": "module",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/hacagahasanli/hh-toolkit-utils"
+    "url": "https://github.com/hacagahasanli/everyday-helper"
   },
   "keywords": [
     "lib",
