--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,7 @@ jobs:
     environment: production  
     permissions:
       contents: write
+      packages: write
       issues: write
       pull-requests: write
       id-token: write
