--- a/package.json
+++ b/package.json
@@ -94,9 +94,8 @@
     "tsup": "^8.5.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vitest": "^2.1.0"
-  },
-  "dependencies": {
+    "vitest": "^2.1.0",
     "@types/react-router-dom": "^5.3.3"
-  }
+  },
+  "dependencies": {}
 }
