correction of index.ts file

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -16,6 +16,7 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "rootDir": "./src",
+    "types": [],
     "paths": {
       "@/*": ["./src/*"]
     }
