--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "everyday-helper",
-  "version": "1.2.4",
+  "version": "1.2.6",
   "description": "A lightweight collection of React hooks, utility functions, and helpers for modern React development",
   "license": "MIT",
   "type": "module",
@@ -31,9 +31,9 @@
     "toolkit",
     "utilities"
   ],
-  "main": "./index.js",
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "LICENSE",
@@ -41,8 +41,8 @@
   ],
   "exports": {
     ".": {
-      "types": "./index.d.ts",
-      "import": "./index.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./package.json": "./package.json"
   },
