--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Build output at root (copied from dist for publishing)
+/index.js
+/index.d.ts
+/styles
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
