--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "type": "git",
     "url": "https://github.com/hacagahasanli/everyday-helper"
   },
-  "directories": {
-    "dist": "./dist"
-  },
   "keywords": [
     "lib",
     "react",
@@ -31,30 +28,36 @@
     "toolkit",
     "utilities"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./index.js",
+  "module": "./index.js",
+  "types": "./index.d.ts",
   "files": [
-    "dist",
+    "index.js",
+    "index.d.ts",
+    "styles",
     "LICENSE",
     "README.md"
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "types": "./index.d.ts",
+      "import": "./index.js"
     },
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "tsup",
+    "locale-build": "tsup",
+    "build": "tsup && npm run copy-dist",
+    "copy-dist": "cp dist/index.js index.js && cp dist/index.d.ts index.d.ts && cp -r dist/styles styles",
+    "clean-dist": "rm -f index.js index.d.ts && rm -rf styles",
     "lint": "eslint .",
     "dev": "tsup --watch",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "type-check": "tsc --noEmit",
     "test:watch": "vitest --watch",
-    "test:coverage": "vitest run --coverage --reporter=verbose"
+    "test:coverage": "vitest run --coverage --reporter=verbose",
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
     "react": ">=18",
@@ -80,6 +83,7 @@
     "@testing-library/react": "^16.3.0",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitest/coverage-v8": "^2.1.0",
     "@vitest/ui": "^2.1.0",
     "copyfiles": "^2.4.1",
@@ -92,8 +96,7 @@
     "tsup": "^8.5.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vitest": "^2.1.0",
-    "@types/react-router-dom": "^5.3.3"
+    "vitest": "^2.1.0"
   },
   "dependencies": {}
 }
