--- a/package.json
+++ b/package.json
@@ -80,8 +80,10 @@
     "@semantic-release/npm": "^12.0.2",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^25.0.9",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitest/coverage-v8": "^2.1.0",
     "@vitest/ui": "^2.1.0",
     "copyfiles": "^2.4.1",
@@ -94,8 +96,7 @@
     "tsup": "^8.5.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vitest": "^2.1.0",
-    "@types/react-router-dom": "^5.3.3"
+    "vitest": "^2.1.0"
   },
   "dependencies": {}
 }
