--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "declaration": true,
     "declarationMap": true,
+    "types": ["node", "react"],
     "emitDeclarationOnly": false,
     "noEmit": false,
     "jsx": "react-jsx",
