--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "access": "public"
   },
   "author": {
-    "name": "Hasanli Hajagha"
+    "name": "Hasanli Hajagha",
+    "email": "hacagahasanli@gmail.com",
+    "url": "https://github.com/hacagahasanli"
   },
   "maintainers": [
     {
@@ -21,9 +23,6 @@
     "type": "git",
     "url": "https://github.com/hacagahasanli/everyday-helper"
   },
-  "directories": {
-    "dist": "./dist"
-  },
   "keywords": [
     "lib",
     "react",
@@ -31,32 +30,33 @@
     "toolkit",
     "utilities"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+ "main": "./index.js",
+  "module": "./index.js",
+  "types": "./index.d.ts",
   "files": [
-    "dist",
+    "index.js",
+    "index.d.ts",
+    "styles",
     "LICENSE",
     "README.md"
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
+      "import": "./index.js",
+      "types": "./index.d.ts"
     },
     "./package.json": "./package.json"
   },
-  "scripts": {
-    "build": "tsup",
-    "lint": "eslint .",
+ "scripts": {
     "dev": "tsup --watch",
-    "test": "vitest",
-    "release": "semantic-release",
-    "prepublishOnly": "npm run build",
-    "test:ui": "vitest --ui",
+    "locale-build": "tsup",
     "type-check": "tsc --noEmit",
-    "test:watch": "vitest --watch",
-    "test:coverage": "vitest run --coverage --reporter=verbose"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint src --ext .ts,.tsx",
+    "build": "tsup && npm run copy-dist",
+    "test": "echo \"No tests yet\" && exit 0",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "copy-dist": "cp dist/index.js index.js && cp dist/index.d.ts index.d.ts"
   },
   "peerDependencies": {
     "react": ">=18",
